deployment/telemetry-manifests.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka
  namespace: telemetry-system
spec:
  ports:
    - name: kafka
      port: 9092
      targetPort: 9092
    - name: controller
      port: 9093
      targetPort: 9093
  clusterIP: None  # headless service for StatefulSet
  selector:
    app: kafka
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: kafka
  namespace: telemetry-system
spec:
  serviceName: kafka
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
        - name: kafka
          image: bitnami/kafka:latest
          ports:
            - containerPort: 9092
            - containerPort: 9093
          volumeMounts:
            - name: kafka-data
              mountPath: /bitnami/kafka
  volumeClaimTemplates:
    - metadata:
        name: kafka-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi

---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: telemetry-system
spec:
  ports:
    - port: 6379
      name: redis
  clusterIP: None
  selector:
    app: redis
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: telemetry-system
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis:7
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 512Mi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: telemetry-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
        - name: gateway
          image: sshewalkar4094/telemetry-ingestor:latest
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway
  namespace: telemetry-system
spec:
  selector:
    app: gateway
  ports:
    - port: 8080
      targetPort: 8080
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gateway
  namespace: telemetry-system
spec:
  to:
    kind: Service
    name: gateway
  port:
    targetPort: 8080
  tls:
    termination: edge 
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: iot-simulator
  namespace: telemetry-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: iot-simulator
  template:
    metadata:
      labels:
        app: iot-simulator
    spec:
      containers:
        - name: iot-simulator
          image: sshewalkar4094/iot-simulator:latest
